--- a/Civica/Base.lproj/Main.storyboard
+++ b/Civica/Base.lproj/Main.storyboard
@@ -159,9 +159,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="Vhy-Qj-S7w">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsTableViewCell" rowHeight="245" id="OEO-eB-jng" customClass="NewsTableViewCell" customModule="Civica" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="245"/>
+                                        <rect key="frame" x="0.0" y="88.666666030883789" width="414" height="245"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OEO-eB-jng" id="3cL-93-hKi">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="245"/>
@@ -225,6 +230,7 @@
                     <tabBarItem key="tabBarItem" title="Local News" id="O4P-4I-FZk"/>
                     <connections>
                         <outlet property="newsTableView" destination="m85-J9-XxJ" id="P1t-XW-kN4"/>
+                        <outlet property="searchBar" destination="Vhy-Qj-S7w" id="W21-a1-dlO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5nb-2j-S7Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
